bindings/python/whisper_cpp_wrapper.py


        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["whisper"] = load_library("whisper")

# 1 libraries
# End libraries

# No modules

__uint32_t = c_uint# /usr/include/x86_64-linux-gnu/bits/types.h: 42

uint32_t = __uint32_t# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 26

enum_ggml_log_level = c_int# /home/dnhkng/Documents/Projects/whisper.cpp/ggml.h: 461

ggml_log_callback = CFUNCTYPE(UNCHECKED(None), enum_ggml_log_level, String, POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/ggml.h: 1826

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 77
class struct_whisper_context(Structure):
    pass

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 78
class struct_whisper_state(Structure):
    pass

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 428
class struct_whisper_full_params(Structure):
    pass

whisper_pos = c_int32# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 81

whisper_token = c_int32# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 82

whisper_seq_id = c_int32# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 83

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 85
class struct_whisper_context_params(Structure):
    pass

struct_whisper_context_params.__slots__ = [
    'use_gpu',
]
struct_whisper_context_params._fields_ = [
    ('use_gpu', c_bool),
]

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 104
class struct_whisper_token_data(Structure):
    pass

struct_whisper_token_data.__slots__ = [
    'id',
    'tid',
    'p',
    'plog',
    'pt',
    'ptsum',
    't0',
    't1',
    'vlen',
]
struct_whisper_token_data._fields_ = [
    ('id', whisper_token),
    ('tid', whisper_token),
    ('p', c_float),
    ('plog', c_float),
    ('pt', c_float),
    ('ptsum', c_float),
    ('t0', c_int64),
    ('t1', c_int64),
    ('vlen', c_float),
]

whisper_token_data = struct_whisper_token_data# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 104

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 112
class struct_whisper_model_loader(Structure):
    pass

struct_whisper_model_loader.__slots__ = [
    'context',
    'read',
    'eof',
    'close',
]
struct_whisper_model_loader._fields_ = [
    ('context', POINTER(None)),
    ('read', CFUNCTYPE(UNCHECKED(c_size_t), POINTER(None), POINTER(None), c_size_t)),
    ('eof', CFUNCTYPE(UNCHECKED(c_bool), POINTER(None))),
    ('close', CFUNCTYPE(UNCHECKED(None), POINTER(None))),
]

whisper_model_loader = struct_whisper_model_loader# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 112

enum_whisper_gretype = c_int# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_END = 0# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_ALT = 1# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_RULE_REF = 2# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_CHAR = 3# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_CHAR_NOT = 4# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_CHAR_RNG_UPPER = 5# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

WHISPER_GRETYPE_CHAR_ALT = 6# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 115

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 143
class struct_whisper_grammar_element(Structure):
    pass

struct_whisper_grammar_element.__slots__ = [
    'type',
    'value',
]
struct_whisper_grammar_element._fields_ = [
    ('type', enum_whisper_gretype),
    ('value', uint32_t),
]

whisper_grammar_element = struct_whisper_grammar_element# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 143

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 148
if _libs["whisper"].has("whisper_init_from_file_with_params", "cdecl"):
    whisper_init_from_file_with_params = _libs["whisper"].get("whisper_init_from_file_with_params", "cdecl")
    whisper_init_from_file_with_params.argtypes = [String, struct_whisper_context_params]
    whisper_init_from_file_with_params.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 149
if _libs["whisper"].has("whisper_init_from_buffer_with_params", "cdecl"):
    whisper_init_from_buffer_with_params = _libs["whisper"].get("whisper_init_from_buffer_with_params", "cdecl")
    whisper_init_from_buffer_with_params.argtypes = [POINTER(None), c_size_t, struct_whisper_context_params]
    whisper_init_from_buffer_with_params.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 150
if _libs["whisper"].has("whisper_init_with_params", "cdecl"):
    whisper_init_with_params = _libs["whisper"].get("whisper_init_with_params", "cdecl")
    whisper_init_with_params.argtypes = [POINTER(struct_whisper_model_loader), struct_whisper_context_params]
    whisper_init_with_params.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 154
if _libs["whisper"].has("whisper_init_from_file_with_params_no_state", "cdecl"):
    whisper_init_from_file_with_params_no_state = _libs["whisper"].get("whisper_init_from_file_with_params_no_state", "cdecl")
    whisper_init_from_file_with_params_no_state.argtypes = [String, struct_whisper_context_params]
    whisper_init_from_file_with_params_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 155
if _libs["whisper"].has("whisper_init_from_buffer_with_params_no_state", "cdecl"):
    whisper_init_from_buffer_with_params_no_state = _libs["whisper"].get("whisper_init_from_buffer_with_params_no_state", "cdecl")
    whisper_init_from_buffer_with_params_no_state.argtypes = [POINTER(None), c_size_t, struct_whisper_context_params]
    whisper_init_from_buffer_with_params_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 156
if _libs["whisper"].has("whisper_init_with_params_no_state", "cdecl"):
    whisper_init_with_params_no_state = _libs["whisper"].get("whisper_init_with_params_no_state", "cdecl")
    whisper_init_with_params_no_state.argtypes = [POINTER(struct_whisper_model_loader), struct_whisper_context_params]
    whisper_init_with_params_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 158
if _libs["whisper"].has("whisper_init_from_file", "cdecl"):
    whisper_init_from_file = _libs["whisper"].get("whisper_init_from_file", "cdecl")
    whisper_init_from_file.argtypes = [String]
    whisper_init_from_file.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 162
if _libs["whisper"].has("whisper_init_from_buffer", "cdecl"):
    whisper_init_from_buffer = _libs["whisper"].get("whisper_init_from_buffer", "cdecl")
    whisper_init_from_buffer.argtypes = [POINTER(None), c_size_t]
    whisper_init_from_buffer.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 166
if _libs["whisper"].has("whisper_init", "cdecl"):
    whisper_init = _libs["whisper"].get("whisper_init", "cdecl")
    whisper_init.argtypes = [POINTER(struct_whisper_model_loader)]
    whisper_init.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 170
if _libs["whisper"].has("whisper_init_from_file_no_state", "cdecl"):
    whisper_init_from_file_no_state = _libs["whisper"].get("whisper_init_from_file_no_state", "cdecl")
    whisper_init_from_file_no_state.argtypes = [String]
    whisper_init_from_file_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 174
if _libs["whisper"].has("whisper_init_from_buffer_no_state", "cdecl"):
    whisper_init_from_buffer_no_state = _libs["whisper"].get("whisper_init_from_buffer_no_state", "cdecl")
    whisper_init_from_buffer_no_state.argtypes = [POINTER(None), c_size_t]
    whisper_init_from_buffer_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 178
if _libs["whisper"].has("whisper_init_no_state", "cdecl"):
    whisper_init_no_state = _libs["whisper"].get("whisper_init_no_state", "cdecl")
    whisper_init_no_state.argtypes = [POINTER(struct_whisper_model_loader)]
    whisper_init_no_state.restype = POINTER(struct_whisper_context)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 183
if _libs["whisper"].has("whisper_init_state", "cdecl"):
    whisper_init_state = _libs["whisper"].get("whisper_init_state", "cdecl")
    whisper_init_state.argtypes = [POINTER(struct_whisper_context)]
    whisper_init_state.restype = POINTER(struct_whisper_state)
